2009-12-20  Adam Barth  <abarth@webkit.org>

        [bzt] Optimize status updates for new dashboard
        https://bugs.webkit.org/show_bug.cgi?id=32797

        This patch makes the queues slightly more chatty with the web service.
        Also, this patch introduces some testing for the queues!

        * Scripts/modules/commands/early_warning_system.py:
        * Scripts/modules/commands/early_warning_system_unittest.py: Added.
        * Scripts/modules/commands/queues.py:
        * Scripts/modules/commands/queues_unittest.py:
        * Scripts/modules/commands/queuestest.py: Added.
        * Scripts/modules/mock_bugzillatool.py:
        * Scripts/modules/patchcollection.py:
        * Scripts/modules/queueengine.py:
        * Scripts/run-webkit-unittests:

2009-12-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Prepare QueueStatusServer for new status messages
        https://bugs.webkit.org/show_bug.cgi?id=32805

        * QueueStatusServer/handlers/recentstatus.py:
        * QueueStatusServer/index.html: Removed.
        * QueueStatusServer/model/attachment.py:
        * QueueStatusServer/model/queues.py: Added.
        * QueueStatusServer/templates/recentstatus.html: Added.

2009-12-20  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Adam Barth.

        [check-webkit-style] static_cast is not misnamed!
        https://bugs.webkit.org/show_bug.cgi?id=32796

        * Scripts/modules/cpp_style.py:
        * Scripts/modules/cpp_style_unittest.py:

2009-12-20  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Failing test platform/gtk/editing/pasteboard/middle-button-paste.html
        https://bugs.webkit.org/show_bug.cgi?id=32788

        Do not increase the click count if we are using a different button.

        * DumpRenderTree/gtk/EventSender.cpp:

2009-12-20  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.
